--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -1,143 +1,6 @@
 div[data-component] {
   color: red; }
 
-.live-filter.collapsed {
-  width: 30px; }
-
-.live-filter.expanded {
-  width: 250px; }
-
-.live-filter {
-  min-height: 400px; }
-  .live-filter .icon {
-    float: right;
-    height: inherit; }
-  .live-filter .facet-selected .panel-heading {
-    background-image: url("../img/cross.svg");
-    background-repeat: no-repeat;
-    background-position: 90%; }
-  .live-filter .facet-collapsed .panel-heading {
-    background-image: url("../img/chevron-thin-down.svg");
-    background-repeat: no-repeat;
-    background-position: 90%; }
-  .live-filter .facet-expanded .panel-heading {
-    background-image: url("../img/chevron-thin-up.svg");
-    background-repeat: no-repeat;
-    background-position: 90%; }
-  .live-filter .panel-heading {
-    cursor: pointer; }
-  .live-filter ul {
-    list-style-type: none; }
-  .live-filter li {
-    cursor: pointer; }
-  .live-filter li:hover {
-    color: #E6E6E6; }
-
-.chevron-thin-left {
-  background: url("../img/chevron-thin-left.svg") no-repeat right center; }
-
-.chevron-thin-right {
-  background: url("../img/chevron-thin-right.svg") no-repeat right center; }
-
-/* Style for the quick-search-component*/
-/* Variables*/
-/* Style */
-div.qs-quick-search {
-  width: 100%;
-  position: relative;
-  height: 70px;
-  /* Input block */
-  /* Help block.*/ }
-  div.qs-quick-search div.qs-scope {
-    width: 70px;
-    height: 35px;
-    background-color: #595959;
-    padding-top: 6px;
-    padding-right: 12px;
-    padding-bottom: 6px;
-    padding-left: 12px;
-    padding: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1; }
-    div.qs-quick-search div.qs-scope > div {
-      padding: 4px 25px 4px 2px; }
-    div.qs-quick-search div.qs-scope div {
-      color: white;
-      text-align: center;
-      height: 100%; }
-      div.qs-quick-search div.qs-scope div.qs-icon > div {
-        background-size: 22px; }
-      div.qs-quick-search div.qs-scope div.qs-scope-deploy-up {
-        background: url('../img/arrow-up.svg') no-repeat center right; }
-      div.qs-quick-search div.qs-scope div.qs-scope-deploy-down {
-        background: url('../img/arrow-down.svg') no-repeat center right; }
-      div.qs-quick-search div.qs-scope div div {
-        /*padding-top: 3px;
-        padding-right: 3px;
-        padding-bottom: 3px;
-        padding-left: 3px;*/
-        border: 2px solid white; }
-        div.qs-quick-search div.qs-scope div div {
-          /*width:100%;
-          height:100%;*/
-          border: none; }
-        div.qs-quick-search div.qs-scope div div.qs-scope-none {
-          background: url('../img/qs-none.svg') no-repeat center center;
-          background-size: 100% 100%; }
-    div.qs-quick-search div.qs-scope ul {
-      position: absolute;
-      font-size: 12pt;
-      background-color: #595959;
-      padding: 10px; }
-      div.qs-quick-search div.qs-scope ul li {
-        background-position: center left 5px;
-        list-style-type: none;
-        color: white;
-        height: 32px;
-        line-height: 32px;
-        min-width: 120px;
-        padding-left: 40px;
-        background-size: 22px;
-        font-size: 14px;
-        cursor: pointer; }
-        div.qs-quick-search div.qs-scope ul li:hover {
-          background-color: rgba(141, 134, 134, 0.62); }
-        div.qs-quick-search div.qs-scope ul li.active {
-          font-weight: bold; }
-  div.qs-quick-search input[type=search] {
-    padding-top: 6px;
-    padding-right: 12px;
-    padding-bottom: 6px;
-    padding-left: 70px;
-    width: 100%;
-    height: 35px;
-    position: absolute;
-    top: 0;
-    left: 0; }
-    div.qs-quick-search input[type=search].qs-loading {
-      background: #FFF url(../img/loading.gif) no-repeat right center; }
-  div.qs-quick-search div.qs-help {
-    z-index: 2;
-    position: relative;
-    top: 40px;
-    padding-left: 45px;
-    left: 50px;
-    background: url('../img/help-arrow.svg') no-repeat center left; }
-
-.qs-scope-1 {
-  background: url('../img/earth.svg') no-repeat center center; }
-
-.qs-scope-2 {
-  background: url('../img/user.svg') no-repeat center center; }
-
-.qs-scope-3 {
-  background: url('../img/rocket.svg') no-repeat center center; }
-
-.qs-scope-none {
-  background: url('../img/qs-none.svg') no-repeat center center; }
-
 .checkbox-unchecked {
   background: url("../img/checkbox-unchecked.svg") no-repeat center; }
 
@@ -347,6 +210,143 @@ ul.selection-list {
 .timeline-body > p + p {
   margin-top: 5px; }
 
+.live-filter.collapsed {
+  width: 30px; }
+
+.live-filter.expanded {
+  width: 250px; }
+
+.live-filter {
+  min-height: 400px; }
+  .live-filter .icon {
+    float: right;
+    height: inherit; }
+  .live-filter .facet-selected .panel-heading {
+    background-image: url("../img/cross.svg");
+    background-repeat: no-repeat;
+    background-position: 90%; }
+  .live-filter .facet-collapsed .panel-heading {
+    background-image: url("../img/chevron-thin-down.svg");
+    background-repeat: no-repeat;
+    background-position: 90%; }
+  .live-filter .facet-expanded .panel-heading {
+    background-image: url("../img/chevron-thin-up.svg");
+    background-repeat: no-repeat;
+    background-position: 90%; }
+  .live-filter .panel-heading {
+    cursor: pointer; }
+  .live-filter ul {
+    list-style-type: none; }
+  .live-filter li {
+    cursor: pointer; }
+  .live-filter li:hover {
+    color: #E6E6E6; }
+
+.chevron-thin-left {
+  background: url("../img/chevron-thin-left.svg") no-repeat right center; }
+
+.chevron-thin-right {
+  background: url("../img/chevron-thin-right.svg") no-repeat right center; }
+
+/* Style for the quick-search-component*/
+/* Variables*/
+/* Style */
+div.qs-quick-search {
+  width: 100%;
+  position: relative;
+  height: 70px;
+  /* Input block */
+  /* Help block.*/ }
+  div.qs-quick-search div.qs-scope {
+    width: 70px;
+    height: 35px;
+    background-color: #595959;
+    padding-top: 6px;
+    padding-right: 12px;
+    padding-bottom: 6px;
+    padding-left: 12px;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1; }
+    div.qs-quick-search div.qs-scope > div {
+      padding: 4px 25px 4px 2px; }
+    div.qs-quick-search div.qs-scope div {
+      color: white;
+      text-align: center;
+      height: 100%; }
+      div.qs-quick-search div.qs-scope div.qs-icon > div {
+        background-size: 22px; }
+      div.qs-quick-search div.qs-scope div.qs-scope-deploy-up {
+        background: url('../img/arrow-up.svg') no-repeat center right; }
+      div.qs-quick-search div.qs-scope div.qs-scope-deploy-down {
+        background: url('../img/arrow-down.svg') no-repeat center right; }
+      div.qs-quick-search div.qs-scope div div {
+        /*padding-top: 3px;
+        padding-right: 3px;
+        padding-bottom: 3px;
+        padding-left: 3px;*/
+        border: 2px solid white; }
+        div.qs-quick-search div.qs-scope div div {
+          /*width:100%;
+          height:100%;*/
+          border: none; }
+        div.qs-quick-search div.qs-scope div div.qs-scope-none {
+          background: url('../img/qs-none.svg') no-repeat center center;
+          background-size: 100% 100%; }
+    div.qs-quick-search div.qs-scope ul {
+      position: absolute;
+      font-size: 12pt;
+      background-color: #595959;
+      padding: 10px; }
+      div.qs-quick-search div.qs-scope ul li {
+        background-position: center left 5px;
+        list-style-type: none;
+        color: white;
+        height: 32px;
+        line-height: 32px;
+        min-width: 120px;
+        padding-left: 40px;
+        background-size: 22px;
+        font-size: 14px;
+        cursor: pointer; }
+        div.qs-quick-search div.qs-scope ul li:hover {
+          background-color: rgba(141, 134, 134, 0.62); }
+        div.qs-quick-search div.qs-scope ul li.active {
+          font-weight: bold; }
+  div.qs-quick-search input[type=search] {
+    padding-top: 6px;
+    padding-right: 12px;
+    padding-bottom: 6px;
+    padding-left: 70px;
+    width: 100%;
+    height: 35px;
+    position: absolute;
+    top: 0;
+    left: 0; }
+    div.qs-quick-search input[type=search].qs-loading {
+      background: #FFF url(../img/loading.gif) no-repeat right center; }
+  div.qs-quick-search div.qs-help {
+    z-index: 2;
+    position: relative;
+    top: 40px;
+    padding-left: 45px;
+    left: 50px;
+    background: url('../img/help-arrow.svg') no-repeat center left; }
+
+.qs-scope-1 {
+  background: url('../img/earth.svg') no-repeat center center; }
+
+.qs-scope-2 {
+  background: url('../img/user.svg') no-repeat center center; }
+
+.qs-scope-3 {
+  background: url('../img/rocket.svg') no-repeat center center; }
+
+.qs-scope-none {
+  background: url('../img/qs-none.svg') no-repeat center center; }
+
 .popin {
   position: fixed; }
   .popin .full {
@@ -508,6 +508,13 @@ form.form-edit {
   width: 32px;
   height: 32px;
 }
+.picker{font-size:16px;text-align:left;line-height:1.2;color:#000;position:absolute;z-index:10000;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.picker__input{cursor:default}.picker__input.picker__input--active{border-color:#0089ec}.picker__holder{width:100%;overflow-y:auto;-webkit-overflow-scrolling:touch}/*!
+ * Classic picker styling for pickadate.js
+ * Demo: http://amsul.github.io/pickadate.js
+ */.picker{width:100%}.picker__holder{position:absolute;background:#fff;border:1px solid #aaa;border-top-width:0;border-bottom-width:0;border-radius:0 0 5px 5px;box-sizing:border-box;min-width:176px;max-width:466px;max-height:0;-ms-filter:"alpha(Opacity=0)";filter:alpha(opacity=0);-moz-opacity:0;opacity:0;-webkit-transform:translateY(-1em) perspective(600px) rotateX(10deg);transform:translateY(-1em) perspective(600px) rotateX(10deg);transition:-webkit-transform .15s ease-out,opacity .15s ease-out,max-height 0s .15s,border-width 0s .15s;transition:transform .15s ease-out,opacity .15s ease-out,max-height 0s .15s,border-width 0s .15s}.picker__frame{padding:1px}.picker__wrap{margin:-1px}.picker--opened .picker__holder{max-height:25em;-ms-filter:"alpha(Opacity=100)";filter:alpha(opacity=100);-moz-opacity:1;opacity:1;border-top-width:1px;border-bottom-width:1px;-webkit-transform:translateY(0) perspective(600px) rotateX(0);transform:translateY(0) perspective(600px) rotateX(0);transition:-webkit-transform .15s ease-out,opacity .15s ease-out,max-height 0s,border-width 0s;transition:transform .15s ease-out,opacity .15s ease-out,max-height 0s,border-width 0s;box-shadow:0 6px 18px 1px rgba(0,0,0,.12)}
+ .picker__box{padding:0 1em}.picker__header{text-align:center;position:relative;margin-top:.75em}.picker__month,.picker__year{font-weight:500;display:inline-block;margin-left:.25em;margin-right:.25em}.picker__year{color:#999;font-size:.8em;font-style:italic}.picker__select--month,.picker__select--year{border:1px solid #b7b7b7;height:2em;padding:.5em;margin-left:.25em;margin-right:.25em}@media (min-width:24.5em){.picker__select--month,.picker__select--year{margin-top:-.5em}}.picker__select--month{width:35%}.picker__select--year{width:22.5%}.picker__select--month:focus,.picker__select--year:focus{border-color:#0089ec}.picker__nav--next,.picker__nav--prev{position:absolute;padding:.5em 1.25em;width:1em;height:1em;box-sizing:content-box;top:-.25em}@media (min-width:24.5em){.picker__nav--next,.picker__nav--prev{top:-.33em}}.picker__nav--prev{left:-1em;padding-right:1.25em}@media (min-width:24.5em){.picker__nav--prev{padding-right:1.5em}}.picker__nav--next{right:-1em;padding-left:1.25em}@media (min-width:24.5em){.picker__nav--next{padding-left:1.5em}}.picker__nav--next:before,.picker__nav--prev:before{content:" ";border-top:.5em solid transparent;border-bottom:.5em solid transparent;border-right:.75em solid #000;width:0;height:0;display:block;margin:0 auto}.picker__nav--next:before{border-right:0;border-left:.75em solid #000}.picker__nav--next:hover,.picker__nav--prev:hover{cursor:pointer;color:#000;background:#b1dcfb}.picker__nav--disabled,.picker__nav--disabled:before,.picker__nav--disabled:before:hover,.picker__nav--disabled:hover{cursor:default;background:0 0;border-right-color:#f5f5f5;border-left-color:#f5f5f5}.picker__table{text-align:center;border-collapse:collapse;border-spacing:0;table-layout:fixed;font-size:inherit;width:100%;margin-top:.75em;margin-bottom:.5em}@media (min-height:33.875em){.picker__table{margin-bottom:.75em}}.picker__table td{margin:0;padding:0}.picker__weekday{width:14.285714286%;font-size:.75em;padding-bottom:.25em;color:#999;font-weight:500}@media (min-height:33.875em){.picker__weekday{padding-bottom:.5em}}.picker__day{padding:.3125em 0;font-weight:200;border:1px solid transparent}.picker__day--today{position:relative}.picker__day--today:before{content:" ";position:absolute;top:2px;right:2px;width:0;height:0;border-top:.5em solid #0059bc;border-left:.5em solid transparent}.picker__day--disabled:before{border-top-color:#aaa}.picker__day--outfocus{color:#ddd}.picker__day--infocus:hover,.picker__day--outfocus:hover{cursor:pointer;color:#000;background:#b1dcfb}.picker__day--highlighted{border-color:#0089ec}.picker--focused .picker__day--highlighted,.picker__day--highlighted:hover{cursor:pointer;color:#000;background:#b1dcfb}.picker--focused .picker__day--selected,.picker__day--selected,.picker__day--selected:hover{background:#0089ec;color:#fff}.picker--focused .picker__day--disabled,.picker__day--disabled,.picker__day--disabled:hover{background:#f5f5f5;border-color:#f5f5f5;color:#ddd;cursor:default}.picker__day--highlighted.picker__day--disabled,.picker__day--highlighted.picker__day--disabled:hover{background:#bbb}.picker__footer{text-align:center}.picker__button--clear,.picker__button--close,.picker__button--today{border:1px solid #fff;background:#fff;font-size:.8em;padding:.66em 0;font-weight:700;width:33%;display:inline-block;vertical-align:bottom}.picker__button--clear:hover,.picker__button--close:hover,.picker__button--today:hover{cursor:pointer;color:#000;background:#b1dcfb;border-bottom-color:#b1dcfb}.picker__button--clear:focus,.picker__button--close:focus,.picker__button--today:focus{background:#b1dcfb;border-color:#0089ec;outline:0}.picker__button--clear:before,.picker__button--close:before,.picker__button--today:before{position:relative;display:inline-block;height:0}.picker__button--clear:before,.picker__button--today:before{content:" ";margin-right:.45em}.picker__button--today:before{top:-.05em;width:0;border-top:.66em solid #0059bc;border-left:.66em solid transparent}.picker__button--clear:before{top:-.25em;width:.66em;border-top:3px solid #e20}.picker__button--close:before{content:"\D7";top:-.1em;vertical-align:top;font-size:1.1em;margin-right:.35em;color:#777}.picker__button--today[disabled],.picker__button--today[disabled]:hover{background:#f5f5f5;border-color:#f5f5f5;color:#ddd;cursor:default}.picker__button--today[disabled]:before{border-top-color:#aaa}
+ 
+
 /*!
 Animate.css - http://daneden.me/animate
 Licensed under the MIT license - http://opensource.org/licenses/MIT
